Header: fix img not showing up issue in doc site (#381)

--- a/packages/ds/angular/header/header.component.scss
+++ b/packages/ds/angular/header/header.component.scss
@@ -19,8 +19,12 @@
     display: grid;
     @include layout-grid.grid(max-content auto, auto);
     * {grid-column: auto / span 1};
-    
+
     align-items: center;
+
+    img {
+      min-width: 295px;
+    }
   }
 
   .item2 {
